Reduce load flags that affect the host cache

Previously, all three of the load flags that prevent use of the HTTP
cache also prevented use of the DNS cache when using the socket pools.
This is not the desired behavior for most consumers of those load flags.
LOAD_BYPASS_CACHE has some consumers that might be depending on the
behavior, so it stays the same. LOAD_DISABLE_CACHE and
LOAD_VALIDATE_CACHE will not affect the host cache.

Details: https://docs.google.com/document/d/1CuGd8ZnGd56L0wpX1jkB96Lm6IF9fF409h234AqjtNw/edit?usp=sharing

Bug: 743235, 621958
Change-Id: I4560cc3bf96da2f19c10a5c68179d9294012f549
Reviewed-on: https://chromium-review.googlesource.com/976539
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545279}
Former-commit-id: 2a01b16799fefbbc30092cc6d79a0bb77db4221f