net/base/load_flags_list.h
@@ -16,10 +16,13 @@
 
 LOAD_FLAG(NORMAL, 0)
 
-// This is "normal reload", meaning an if-none-match/if-modified-since query
+// This is "normal reload", meaning an if-none-match/if-modified-since query. It
+// has no effect on the host cache.
 LOAD_FLAG(VALIDATE_CACHE, 1 << 0)
 
-// This is "shift-reload", meaning a "pragma: no-cache" end-to-end fetch
+// This is "shift-reload", meaning a "pragma: no-cache" end-to-end fetch. It
+// also disables use of the host cache for resolutions that go through the
+// socket pools.
 LOAD_FLAG(BYPASS_CACHE, 1 << 1)
 
 // This is a back/forward style navigation where the cached content should
@@ -31,7 +34,7 @@ LOAD_FLAG(SKIP_CACHE_VALIDATION, 1 << 2)
 LOAD_FLAG(ONLY_FROM_CACHE, 1 << 3)
 
 // This is a navigation that will not use the cache at all.  It does not
-// impact the HTTP request headers.
+// impact the HTTP request headers or use of the host cache.
 LOAD_FLAG(DISABLE_CACHE, 1 << 4)
 
 // If present, causes certificate revocation checks to be skipped on secure
